qaq/static/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - name: http
      port: 80
      targetPort: 8000
