qaq/static/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Gateway-Prefix /static;
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /static/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: static
                port:
                  number: 8000
